--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/services/_toggle.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/services/_toggle.html
@@ -1,4 +1,5 @@
-{% if service.disabled %}               
+{%load i18n%}
+{% if service.disabled %}
   <form id="form_service_enable_{{service.id}}" class="form-service-enable" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
@@ -6,7 +7,7 @@
     {% endfor %}
     <input name="service" type="hidden" value="{{service.id}}" />
     <input name="name" type="hidden" value="{{service.type}}" />
-    <input id="enable_{{service.id}}" class="enable" title="Service: {{service.type}}" type="submit" value="Enable" />
+    <input id="enable_{{service.id}}" class="enable" title="Service: {{service.type}}" type="submit" value="{% trans "Enable"%}" />
   </form>
 {% else %}
   <form id="form_service_disable_{{service.id}}" class="form-service-disable" method="post">
@@ -16,6 +17,6 @@
     {% endfor %}
     <input name="service" type="hidden" value="{{service.id}}" />
     <input name="name" type="hidden" value="{{service.type}}" />
-    <input id="disable_{{service.id}}" class="disable" title="Service: {{service.type}}" type="submit" value="Disable" />
+    <input id="disable_{{service.id}}" class="disable" title="Service: {{service.type}}" type="submit" value="{% trans "Disable"%}" />
   </form>
 {% endif %}
