--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_list.html
@@ -1,10 +1,11 @@
+{%load i18n%}
 <table class="wide">
   <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Enabled</th>
-    <th>Options</th>
+    <th>{% trans "Id"%}</th>
+    <th>{% trans "Name"%}</th>
+    <th>{% trans "Description"%}</th>
+    <th>{% trans "Enabled"%}</th>
+    <th>{% trans "Options"%}</th>
   </tr>
   {% for tenant in tenants %}
     <tr class="{% cycle 'odd' 'even' %}">
@@ -15,9 +16,9 @@
       <td id="actions">
         <ul>
           <li class="form">{% include "django_openstack/syspanel/tenants/_delete.html" with form=tenant_delete_form %}</li>
-          <li><a href="{% url syspanel_tenant_update tenant.id %}">Edit</a></li>
-          <li><a href="{% url syspanel_tenant_users tenant.id %}">View Members</a></li>
-          <li><a href="{% url syspanel_tenant_quotas tenant.id %}">Modify Quotas</a></li>
+          <li><a href="{% url syspanel_tenant_update tenant.id %}">{% trans "Edit"%}</a></li>
+          <li><a href="{% url syspanel_tenant_users tenant.id %}">{% trans "View Members"%}</a></li>
+          <li><a href="{% url syspanel_tenant_quotas tenant.id %}">{% trans "Modify Quotas"%}</a></li>
         </ul>
       </td>
     </tr>
