--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_update_quotas_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_update_quotas_form.html
@@ -1,6 +1,6 @@
 {% extends "django_openstack/syspanel/tenants/_quotas_form.html" %}
+{%load i18n%}
 
 {% block submit %}
-  <input type="submit" value="Update Quotas" class="large-rounded" />
+  <input type="submit" value="{% trans "Update Quotas"%}" class="large-rounded" />
 {% endblock %}
-
