--- a/django-openstack/django_openstack/templates/django_openstack/dash/images/launch.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/images/launch.html
@@ -9,7 +9,7 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Launch Instance" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Launch Instance") %}
 {% endblock page_header %}
 
 {% block dash_main %}
