--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/_sidebar.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/_sidebar.html
@@ -1,18 +1,18 @@
 {% load sidebar_modules %}
+{%load i18n%}
 
 <div id='sidebar'>
-  <h3>System Panel</h3>
+  <h3>{% trans "System Panel"%}</h3>
   <ul class='sub_nav'>
-    <li><a {% if current_sidebar == "overview" %} class="active" {% endif %} href="{% url syspanel_overview %}">Overview</a></li>
-    <li><a {% if current_sidebar == "services" %} class="active" {% endif %} href="{% url syspanel_services %}">Services</a></li>
-    <li><a {% if current_sidebar == "instances" %} class="active" {% endif %} href="{% url syspanel_instances %}">Instances</a></li>
-    <li><a {% if current_sidebar == "flavors" %} class="active" {% endif %} href="{% url syspanel_flavors %}">Flavors</a></li>
-    <li><a {% if current_sidebar == "images" %} class="active" {% endif %} href="{% url syspanel_images %}">Images</a></li>
-    <li><a {% if current_sidebar == "tenants" %} class="active" {% endif %} href="{% url syspanel_tenants %}">Tenants</a></li>
-    <li><a {% if current_sidebar == "users" %} class="active" {% endif %} href="{% url syspanel_users %}">Users</a></li>
-    <li><a {% if current_sidebar == "quotas" %} class="active" {% endif %} href="{% url syspanel_quotas %}">Quotas</a></li>
+    <li><a {% if current_sidebar == "overview" %} class="active" {% endif %} href="{% url syspanel_overview %}">{% trans "Overview"%}</a></li>
+    <li><a {% if current_sidebar == "services" %} class="active" {% endif %} href="{% url syspanel_services %}">{% trans "Services"%}</a></li>
+    <li><a {% if current_sidebar == "instances" %} class="active" {% endif %} href="{% url syspanel_instances %}">{% trans "Instances"%}</a></li>
+    <li><a {% if current_sidebar == "flavors" %} class="active" {% endif %} href="{% url syspanel_flavors %}">{% trans "Flavors"%}</a></li>
+    <li><a {% if current_sidebar == "images" %} class="active" {% endif %} href="{% url syspanel_images %}">{% trans "Images"%}</a></li>
+    <li><a {% if current_sidebar == "tenants" %} class="active" {% endif %} href="{% url syspanel_tenants %}">{% trans "Tenants"%}</a></li>
+    <li><a {% if current_sidebar == "users" %} class="active" {% endif %} href="{% url syspanel_users %}">{% trans "Users"%}</a></li>
+    <li><a {% if current_sidebar == "quotas" %} class="active" {% endif %} href="{% url syspanel_quotas %}">{% trans "Quotas"%}</a></li>
   </ul>
-  
-  {% syspanel_sidebar_modules request %}
 
+  {% syspanel_sidebar_modules request %}
 </div>
