--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/_create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/_create.html
@@ -1,5 +1,6 @@
 {% extends 'django_openstack/syspanel/flavors/_form.html' %}
+{%load i18n%}
 
 {% block submit %}
-  <input type="submit" value="Create Flavor" class="large-rounded" />
+  <input type="submit" value="{% trans "Create Flavor"%}" class="large-rounded" />
 {% endblock %}
