--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/_list.html
@@ -1,11 +1,12 @@
+{%load i18n%}
 <table class="wide">
   <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>VCPUs</th>
-    <th>Memory</th>
-    <th>Disk</th>
-    <th>Actions</th>
+    <th>{% trans "Id"%}</th>
+    <th>{% trans "Name"%}</th>
+    <th>{% trans "VCPUs"%}</th>
+    <th>{% trans "Memory"%}</th>
+    <th>{% trans "Disk"%}</th>
+    <th>{% trans "Actions"%}</th>
   </tr>
   {% for flavor in flavors %}
     <tr id="{{flavor.id}}" class="{% cycle 'odd' 'even' %}">
