--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/flavors/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="flavors" %}
@@ -9,10 +10,10 @@
 {% block page_header %}
   {% url syspanel_flavors as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Flavors" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Flavors") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "django_openstack/syspanel/flavors/_list.html" %}
-  <a id="flavor_create_link" class="action_link large-rounded" href="{% url syspanel_flavors_create %}">Create New Flavor </a>
+  <a id="flavor_create_link" class="action_link large-rounded" href="{% url syspanel_flavors_create %}">{% trans "Create New Flavor"%}</a>
 {% endblock %}
