--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/images/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/images/_list.html
@@ -1,14 +1,15 @@
 {% load parse_date %}
+{%load i18n%}
 
 <table class="wide">
   <tr>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Size</th>
-    <th>Public</th>
-    <th>Created</th>
-    <th>Updated</th>
-    <th colspan="2">Status</th>
+    <th>{% trans "ID"%}</th>
+    <th>{% trans "Name"%}</th>
+    <th>{% trans "Size"%}</th>
+    <th>{% trans "Public"%}</th>
+    <th>{% trans "Created"%}</th>
+    <th>{% trans "Updated"%}</th>
+    <th colspan="2">{% trans "Status"%}</th>
   </tr>
   {% for image in images %}
   <tr id="images" class="{% cycle 'odd' 'even' %}">
@@ -24,21 +25,21 @@
           <li class="form">{% include "django_openstack/syspanel/images/_delete.html" with form=delete_form %}</li>
           {# <li class="form">{% include "django_openstack/syspanel/images/_toggle.html" with form=toggle_form %}</li> #}
 
-          <li><a href="{% url syspanel_images_update image.id %}">Edit</a></li>
+          <li><a href="{% url syspanel_images_update image.id %}">{% trans "Edit"%}</a></li>
         </ul>
       </td>
   </tr>
   <tr class="details">
     <td class="properties" colspan="9">
       <ul>
-        <li><span>Location: </span>{{image.properties.image_location}}</li>
-        <li><span>State: </span>{{image.properties.image_state}}</li>
-        <li><span>Kernel ID: </span>{{image.properties.kernel_id}}</li>
-        <li><span>Ramdisk ID: </span>{{image.properties.ramdisk_id}}</li>
-        <li><span>Architecture: </span>{{image.properties.architecture}}</li>
-        <li><span>Project ID: </span>{{image.container_format}}</li>
-        <li><span>Container Format: </span>{{image.properties.project_id}}</li>
-        <li><span>Disk Format: </span>{{image.disk_format}}</li>
+        <li><span>{% trans "Location"%}: </span>{{image.properties.image_location}}</li>
+        <li><span>{% trans "State"%}: </span>{{image.properties.image_state}}</li>
+        <li><span>{% trans "Kernel ID"%}: </span>{{image.properties.kernel_id}}</li>
+        <li><span>{% trans "Ramdisk ID"%}: </span>{{image.properties.ramdisk_id}}</li>
+        <li><span>{% trans "Architecture"%}: </span>{{image.properties.architecture}}</li>
+        <li><span>{% trans "Project ID"%}: </span>{{image.container_format}}</li>
+        <li><span>{% trans "Container Format"%}: </span>{{image.properties.project_id}}</li>
+        <li><span>{% trans "Disk Format"%}: </span>{{image.disk_format}}</li>
       </ul>
     </td>
   </tr>
