--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="instances" %}
@@ -9,7 +10,7 @@
 {% block page_header %}
   {% url syspanel_instances as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Instances" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Instances") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
@@ -17,8 +18,9 @@
     {% include 'django_openstack/syspanel/instances/_list.html' %}
   {% else %}
     <div class="message_box info">
-      <h2>Info</h2>
-      <p>There are currently no instances.  You can launch an instance from the  <a href='{% url dash_images request.user.tenant_id %}'>Images Page.</a></p>
+      {% url dash_images request.user.tenant_id as dash_image_url%}
+      <h2>{% trans "Info"%}</h2>
+      <p>{% blocktrans %}There are currently no instances.  You can launch an instance from the  <a href='{{dash_image_url}}'>Images Page.</a>{% endblocktrans %}</p>
     </div>
   {% endif %}
 {% endblock %}
@@ -62,4 +64,3 @@
     })
   </script>
 {% endblock footer_js %}
-
