--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/usage.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/instances/usage.html
@@ -1,5 +1,6 @@
 {% extends 'django_openstack/syspanel/base.html' %}
 {% load sizeformat %}
+{%load i18n%}
 
 {# default landing page for a admin user #}
 {# nav bar on top, sidebar, overview info in main #}
@@ -12,14 +13,14 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="System Panel Overview" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("System Panel Overview") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
   <div id="status_top">
         {% if external_links %}
           <div id="monitoring">
-            <h3>Monitoring: </h3>
+            <h3>{% trans "Monitoring"%}: </h3>
             <ul id="external_links">
               {% for link in external_links %}
                 <li><a target="_blank" href="{{ link.1 }}">{{ link.0 }}</a></li>
@@ -30,7 +31,7 @@
 
         <form action="" method="get" id="date_form">
           <!-- {% csrf_token %} -->
-          <h3> Select a month to query its usage: </h3>
+          <h3>{% trans "Select a month to query its usage"%}: </h3>
           <div class="form-row">
             {{ dateform.date }}
             <input class="submit" type="submit"/>
@@ -57,28 +58,28 @@
         </ul>
 
         <p id="activity">
-          <span><strong>Active Instances:</strong> {{global_summary.total_active_instances|default:'-'}}</span>
-          <span><strong>This month's VCPU-Hours:</strong> {{global_summary.total_cpu_usage|floatformat|default:'-'}}</span>
-          <span><strong>This month's GB-Hours:</strong> {{global_summary.total_disk_usage|floatformat|default:'-'}}</span>
+          <span><strong>{% trans "Active Instances"%}:</strong> {{global_summary.total_active_instances|default:'-'}}</span>
+          <span><strong>{% trans "This month's VCPU-Hours"%}:</strong> {{global_summary.total_cpu_usage|floatformat|default:'-'}}</span>
+          <span><strong>{% trans "This month's GB-Hours"%}:</strong> {{global_summary.total_disk_usage|floatformat|default:'-'}}</span>
         </p>
   </div>
 
   {% if usage_list %}
   <div id="usage_table">
     <div class='table_title wide'>
-      <a class="csv_download_link" href="{{csv_link}}">Download CSV &raquo;</a>
-      <h3>Server Usage Summary</h3>
+      <a class="csv_download_link" href="{{csv_link}}">{% trans "Download CSV"%} &raquo;</a>
+      <h3>{% trans "Server Usage Summary"%}</h3>
     </div>
 
     <table class="wide">
       <tr id="headings">
-        <th>Tenant</th>
-        <th>Instances</th>
-        <th>VCPUs</th>
-        <th>Disk</th>
-        <th>RAM</th>
-        <th>VCPU CPU-Hours</th>
-        <th>Disk GB-Hours</th>
+        <th>{% trans "Tenant"%}</th>
+        <th>{% trans "Instances"%}</th>
+        <th>{% trans "VCPUs"%}</th>
+        <th>{% trans "Disk"%}</th>
+        <th>{% trans "RAM"%}</th>
+        <th>{% trans "VCPU CPU-Hours"%}</th>
+        <th>{% trans "Disk GB-Hours"%}</th>
       </tr>
       {% for usage in usage_list %}
         <tr>
@@ -95,5 +96,4 @@
     {% endif %}
   </div>
 </div>
-
 {% endblock %}
