--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/quotas/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/quotas/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="quotas" %}
@@ -9,14 +10,14 @@
 {% block page_header %}
   {% url syspanel_quotas as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Default Quotas" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Default Quotas") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
   <table class="wide">
     <tr>
-      <th>Quota Name</th>
-      <th>Limit</th>
+      <th>{% trans "Quota Name"%}</th>
+      <th>{% trans "Limit"%}</th>
     </tr>
     {% for name,value in quotas.items %}
       <tr>
