--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/services/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/services/_list.html
@@ -1,11 +1,12 @@
+{%load i18n%}
 {% load sizeformat %}
 <table class="wide">
   <tr>
-    <th>Service</th>
-    <th>System Stats</th>
-    <th>Enabled</th>
-    <th>Up</th>
-    <th>Actions</th>
+    <th>{% trans "Service"%}</th>
+    <th>{% trans "System Stats"%}</th>
+    <th>{% trans "Enabled"%}</th>
+    <th>{% trans "Up"%}</th>
+    <th>{% trans "Actions"%}</th>
   </tr>
 
   {% for service in services %}
@@ -18,20 +19,20 @@
         <td>
           <ul>
             <li>
-              Hypervisor: {{service.stats.hypervisor_type}}( {{service.stats.cpu_info.features|join:', '}})
+              {% trans "Hypervisor"%}: {{service.stats.hypervisor_type}}( {{service.stats.cpu_info.features|join:', '}})
             </li>
             <li>
-              Allocable Cores:
+              {% trans "Allocable Cores"%}:
               {{service.stats.max_vcpus}}
               ({{service.stats.vcpus_used}} Used, {{service.stats.vcpus}} Physical/Virtual)
             </li>
             <li>
-              Allocable Storage:
+              {% trans "Allocable Storage"%}:
               {{service.stats.max_gigabytes|diskgbformat}}
               ({{service.stats.local_gb_used|diskgbformat}} Used, {{service.stats.local_gb|diskgbformat}} Physical)
             </li>
             <li>
-              System Ram:
+              {% trans "System Ram"%}:
               {{service.stats.memory_mb|mbformat}}
               ({{service.stats.memory_mb_used|mbformat}} Used)
             </li>
