--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_add_user.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_add_user.html
@@ -1,3 +1,4 @@
+{%load i18n%}
 <form id="form_add_tenant_user{{user}}" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
@@ -5,5 +6,5 @@
   {% endfor %}
   <input name="user" type="hidden" value="{{user.id}}" />
   <input name="tenant" type="hidden" value="{{tenant_id}}" />
-  <input id="add_tenant_user_{{user.id}}" class="add" title="User: {{user.id}}" type="submit" value="Add" />
+  <input id="add_tenant_user_{{user.id}}" class="add" title="User: {{user.id}}" type="submit" value="{% trans "Add"%}" />
 </form>
