--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/create.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/create.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="tenants" %}
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Create Tenant" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Create Tenant") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
@@ -17,13 +18,9 @@
     </div>
 
     <div class="right">
-      <h3>Description:</h3>
-      <p>From here you can create a new tenant (aka project) to organize users.</p>
+      <h3>{% trans "Description"%}:</h3>
+      <p>{% trans "From here you can create a new tenant (aka project) to organize users."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
 {% endblock %}
-
-
-
-
