--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="tenants" %}
@@ -9,12 +10,12 @@
 {% block page_header %}
   {% url syspanel_tenants as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Tenants" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Tenants") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
   {% include "django_openstack/syspanel/tenants/_list.html" %}
-  <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">Create New Tenant </a>
+  <a id="tenant_create_link" class="action_link large-rounded" href="{% url syspanel_tenants_create %}">{% trans "Create New Tenant"%}</a>
 {% endblock %}
 
 
