--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/quotas.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/quotas.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="tenants" %}
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block page_header %}
-  {% include "django_openstack/common/_page_header.html" with title="Update Tenant Quotas" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Update Tenant Quotas") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
@@ -17,8 +18,8 @@
     </div>
 
     <div class="right">
-      <h3>Description:</h3>
-      <p>From here you can edit quotas (max limits) for the tenant {{tenant_id}}.</p>
+      <h3>{% trans "Description"%}:</h3>
+      <p>{% trans "From here you can edit quotas (max limits) for the tenant {{tenant_id}}."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
