--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/users.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/users.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="tenants" %}
@@ -8,7 +9,7 @@
 
 {% block page_header %}
   <div id='page_header'>
-    <h2>Users for Tenant: <span>{{tenant_id}}</span></h2>
+    <h2>{% trans "Users for Tenant"%}: <span>{{tenant_id}}</span></h2>
   </div>
 {% endblock %}
 
@@ -18,10 +19,10 @@
   {% if users %}
     <table class="wide">
       <tr id='headings'>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Actions</th>
+        <th>{% trans "ID"%}</th>
+        <th>{% trans "Name"%}</th>
+        <th>{% trans "Email"%}</th>
+        <th>{% trans "Actions"%}</th>
       </tr>
       <tbody class='main'>
         {% for user in users %}
@@ -40,17 +41,17 @@
     </table>
   {% else %}
     <div class="message_box info">
-      <h2>Info</h2>
-      <p>There are currently no users for this tenant</p>
+      <h2>{% trans "Info"%}</h2>
+      <p>T{% trans "here are currently no users for this tenant"%}</p>
     </div>
   {% endif %}
   {% if new_users %}
-    <h3>Add new users</h3>
+    <h3>{% trans "Add new users"%}</h3>
     <table class="wide">
       <tr id='headings'>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Actions</th>
+        <th>{% trans "ID"%}</th>
+        <th>{% trans "Name"%}</th>
+        <th>{% trans "Actions"%}</th>
       </tr>
       <tbody class='main'>
         {% for user in new_users %}
@@ -69,9 +70,3 @@
   {% endif %}
 
 {% endblock %}
-
-
-
-
-
-
