--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_delete.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_delete.html
@@ -1,8 +1,9 @@
+{%load i18n%}
 <form id="form_user_delete{{user.id}}" class="form-user-delete" method="post">
   {% csrf_token %}
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
   <input name="user" type="hidden" value="{{user.id}}" />
-  <input id="enable_{{user.id}}" class="delete" title="User: {{user.id}}" type="submit" value="Delete" />
+  <input id="enable_{{user.id}}" class="delete" title="User: {{user.id}}" type="submit" value="{% trans "Delete"%}" />
 </form>
