--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_toggle_enabled.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_toggle_enabled.html
@@ -1,19 +1,20 @@
-{% if user.enabled %}               
+{%load i18n%}
+{% if user.enabled %}
   <form id="form_user_disable_{{user.id}}" class="form-user-disable" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
       {{hidden}}
     {% endfor %}
     <input name="user" type="hidden" value="{{user.id}}" />
-    <input id="disable_{{user.id}}" class="disable" title="User: {{user.id}}" type="submit" value="Disable" />
+    <input id="disable_{{user.id}}" class="disable" title="User: {{user.id}}" type="submit" value="{% trans "Disable"%}" />
   </form>
-{% else %}                          
+{% else %}
   <form id="form_user_enable_{{user.id}}" class="form-user-enable" method="post">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
       {{hidden}}
     {% endfor %}
     <input name="user" type="hidden" value="{{user.id}}" />
-    <input id="enable_{{user.id}}" class="enable" title="User: {{user.id}}" type="submit" value="Enable" />
+    <input id="enable_{{user.id}}" class="enable" title="User: {{user.id}}" type="submit" value="{% trans "Enable"%}" />
   </form>
 {% endif %}
