--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_update_form.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/users/_update_form.html
@@ -1,6 +1,7 @@
 {% extends "django_openstack/syspanel/users/_form.html" %}
+{%load i18n%}
 
 {% block submit %}
-  <input type="submit" value="Update User" class="large-rounded" />
+  <input type="submit" value="{% trans "Update User"%}" class="large-rounded" />
 {% endblock %}
 
