--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/users/index.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/users/index.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="users" %}
@@ -9,18 +10,18 @@
 {% block page_header %}
   {% url syspanel_users as refresh_link %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Users" refresh_link=refresh_link searchable="true" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Users") refresh_link=refresh_link searchable="true" %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
 
     <table class="wide">
       <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Default Tenant</th>
-        <th>Options</th>
+        <th>{% trans "ID"%}</th>
+        <th>{% trans "Name"%}</th>
+        <th>{% trans "Email"%}</th>
+        <th>{% trans "Default Tenant"%}</th>
+        <th>{% trans "Options"%}</th>
       </tr>
       {% for user in users %}
         <tr class="{% cycle 'odd' 'even' %}">
@@ -32,14 +33,13 @@
             <ul>
               <li class="form">{% include "django_openstack/syspanel/users/_enable_disable.html" with form=user_enable_disable_form %}</li>
               <li class="form">{% include "django_openstack/syspanel/users/_delete.html" with form=user_delete_form %}</li>
-              <li><a href="{% url syspanel_users_update user.id %}">Edit</a></li>
+              <li><a href="{% url syspanel_users_update user.id %}">{% trans "Edit"%}</a></li>
             </ul>
           </td>
         </tr>
       {% endfor %}
     </table>
-    <a id="user_create_link" class="action_link large-rounded" href="{% url syspanel_users_create %}">Create New User </a>
+    <a id="user_create_link" class="action_link large-rounded" href="{% url syspanel_users_create %}">{% trans "Create New User"%}</a>
   </div>
-
 
 {% endblock %}
