--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/users/update.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/users/update.html
@@ -1,4 +1,5 @@
 {% extends 'django_openstack/syspanel/base.html' %}
+{%load i18n%}
 
 {% block sidebar %}
   {% with current_sidebar="users" %}
@@ -8,7 +9,7 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Update User" %}
+  {% include "django_openstack/common/_page_header.html" with title=_("Update User") %}
 {% endblock page_header %}
 
 {% block syspanel_main %}
@@ -18,8 +19,8 @@
     </div>
 
     <div class="right">
-      <h3>Description:</h3>
-      <p>From here you can edit users by changing their usernames, emails, passwords, and tenants.</p>
+      <h3>{% trans "Description"%}:</h3>
+      <p>{% trans "From here you can edit users by changing their usernames, emails, passwords, and tenants."%}</p>
     </div>
     <div class="clear">&nbsp;</div>
   </div>
