--- a/openstack-dashboard/dashboard/templates/_login.html
+++ b/openstack-dashboard/dashboard/templates/_login.html
@@ -1,7 +1,8 @@
 {% extends 'django_openstack/auth/_login.html' %}
+{% load i18n %}
 {% block submit %}
   <input type="hidden" name="next" value="/" />
   <div class="button">
-    <input id="home_login_btn" type="submit" value="Sign In">
+    <input id="home_login_btn" type="submit" value="{% trans "Sign In"%}">
   </div>
 {% endblock %}
