--- a/openstack-dashboard/dashboard/templates/_messages.html
+++ b/openstack-dashboard/dashboard/templates/_messages.html
@@ -1,27 +1,27 @@
+{% load i18n %}
 {% for message in messages %}
   {% if message.tags == "info" %}
     <div class="message_box info">
-      <h2>Info</h2>
+      <h2>{% trans "Info"%}</h2>
       <p>{{ message }}</p>
     </div>
   {% endif %}
   {% if message.tags == "warning" %}
     <div class="message_box medium">
-      <h2>Warning</h2>
+      <h2>{% trans "Warning"%}</h2>
       <p>{{ message }}</p>
     </div>
   {% endif %}
   {% if message.tags == "success" %}
     <div class="message_box success">
-      <h2>Success</h2>
+      <h2>{% trans "Success"%}</h2>
       <p>{{ message }}</p>
     </div>
   {% endif %}
   {% if message.tags == "error" %}
     <div class="message_box error">
-      <h2>Error</h2>
+      <h2>{% trans "Error"%}</h2>
       <p>{{ message }}</p>
     </div>
   {% endif %}
 {% endfor %}
-
