--- a/openstack-dashboard/dashboard/templates/permission_denied.html
+++ b/openstack-dashboard/dashboard/templates/permission_denied.html
@@ -16,11 +16,11 @@
   <div id="sidebar">
     <ul id="navigation">
       {% block nav_home %}
-      <li><h3><a href="{% url index %}">Home</a></h3></li>
+      <li><h3><a href="{% url index %}">{% trans "Home"%}</a></h3></li>
       {% endblock %}
 
       {% block nav_projects %}
-      <li><h3><a href="{% url index %}">Projects</a></h3></li>
+      <li><h3><a href="{% url index %}">{% trans "Projects"%}</a></h3></li>
       {% endblock %}
     </ul>
   </div> <!-- end sidebar -->
