--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -203,7 +203,7 @@ h1 a{
 #drop_btn:hover { background-color: #bfdec6; }
 
 #settings_btn {
-  background: url(../images/gears.png) no-repeat center center;
+  background: url(../images/gears_small.png) no-repeat center center;
   width: 23px;
   height: 29px;
 }
