--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -1020,3 +1020,56 @@ span.attachment_value {
     font-style:italic;
     color:#6EAF6E;
 }
+
+#instance_tabs {
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+#instance_tabs li a {
+  float: left;
+  min-width: 35px;
+  text-align: center;
+  color: #999;
+  border-color: #e1e1e1 !important;
+  border-left: 1px solid;
+  border-right: 1px solid;
+  border-top: 1px solid;
+  margin-right: 10px;
+  padding: 5px 10px;
+  font-size: 14px;
+  background: #E6E6E6;
+}
+
+#instance_tabs li.active a{
+  background: #F6F6F6;
+}
+
+#overview li {
+  margin-bottom: 15px;
+}
+
+#overview li ul li {
+  margin-bottom: 10px;
+}
+
+#overview h4 {
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-bottom: 15px;
+  color: #666;
+}
+
+#overview li span {
+  color: #666;
+  width: 120px;
+  display: block;
+  float: left;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+pre {
+  overflow: scroll;
+  width: auto;
+}
