adding view full log link to logs tab

--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/detail.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/detail.html
@@ -64,6 +64,7 @@
     </div>
 
     <div id="log" class="tab_wrapper">
+      <a class="view_full" target="_blank" href="{% url dash_instances_console request.user.tenant_id instance.id %}">View Full Log</a>
       <pre class="logs"></pre>
     </div>
 
