--- a/django-openstack/django_openstack/templates/django_openstack/dash/instances/detail.html
+++ b/django-openstack/django_openstack/templates/django_openstack/dash/instances/detail.html
@@ -8,7 +8,7 @@
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
-  {% include "django_openstack/common/_page_header.html" with title="Instance Detail" %}
+  {% include "django_openstack/common/_page_header.html" with title="Instance Detail: "|add:instance.name %}
 {% endblock page_header %}
 
 {% block dash_main %}
