--- a/openstack-dashboard/dashboard/templates/_topbar.html
+++ b/openstack-dashboard/dashboard/templates/_topbar.html
@@ -11,7 +11,7 @@
     {% else %}
       NOT _LOGGED_IN_TOPBAR
     {% endif %}
-    <li><a id="settings_btn" href="{% url dashboard_settings %}">&nbsp;</a></li>
+    <li><a id="settings_btn" {% if current_topbar == "settings" %} class="active" {% endif %} href="{% url dashboard_settings %}">&nbsp;</a></li>
   </ul>
 
   <div id="user_bar">
