Fix image details

--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/images/_list.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/images/_list.html
@@ -37,8 +37,8 @@
         <li><span>{% trans "Kernel ID"%}: </span>{{image.properties.kernel_id}}</li>
         <li><span>{% trans "Ramdisk ID"%}: </span>{{image.properties.ramdisk_id}}</li>
         <li><span>{% trans "Architecture"%}: </span>{{image.properties.architecture}}</li>
-        <li><span>{% trans "Project ID"%}: </span>{{image.container_format}}</li>
-        <li><span>{% trans "Container Format"%}: </span>{{image.properties.project_id}}</li>
+        <li><span>{% trans "Project ID"%}: </span>{{image.properties.project_id}}</li>
+        <li><span>{% trans "Container Format"%}: </span>{{image.container_format}}</li>
         <li><span>{% trans "Disk Format"%}: </span>{{image.disk_format}}</li>
       </ul>
     </td>
