Fixes for LP bugs 879626, 879633, and 879641.
Tenant delete works properly. And since keystone support for tenant/user names is spotty, changes things to make user and tenant names immutable in the dashboard.

--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_delete.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_delete.html
@@ -3,7 +3,7 @@
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input name="tenant" type="hidden" value="{{tenant.id}}" />
-  <input id="enable_{{tenant.id}}" class="enable" title="Tenant: {{tenant.id}}" type="submit" value="Delete" />
+  <input name="tenant_id" type="hidden" value="{{tenant.id}}" />
+  <input id="delete_{{tenant.id}}" class="delete" title="Tenant: {{tenant.id}}" type="submit" value="Delete" />
 </form>
 
