--- a/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_delete.html
+++ b/django-openstack/django_openstack/templates/django_openstack/syspanel/tenants/_delete.html
@@ -4,6 +4,6 @@
   {% for hidden in form.hidden_fields %}
     {{hidden}}
   {% endfor %}
-  <input name="tenant" type="hidden" value="{{tenant.id}}" />
-  <input id="enable_{{tenant.id}}" class="enable" title="Tenant: {{tenant.id}}" type="submit" value="{% trans "Delete"%}" />
+  <input name="tenant_id" type="hidden" value="{{tenant.id}}" />
+  <input id="delete_{{tenant.id}}" class="delete" title="Tenant: {{tenant.id}}" type="submit" value="{% trans "Delete" %}" />
 </form>
