Four modest bug fixes.
Sorry these are in one commit, but they all ran one into the other when I discovered them.

Fixed 887770 -- corrects an instance of "dash" -> "nova" renaming that was missed in openstack-dashboard/dashboard/views.py
Fixed 887768 -- removes duplicate code and adds docstrings to auth_views.py. These changes were previously made but somehow didn't get staged and committed.
Fixed 887767 -- the list of tenants in the tenant switcher no longer changes when viewing the Tenants or Users syspanel pages.
Fixed 887766 -- corrects a broken bit of if/else logic so that the tenant switch list isn't empty.

Change-Id: I0cb6fff83d7279b17233c50ef2d4af2586cca829

--- a/openstack-dashboard/dashboard/templates/_topbar.html
+++ b/openstack-dashboard/dashboard/templates/_topbar.html
@@ -15,7 +15,7 @@
     <a id="drop_btn" href="#">&nbsp;</a>
     <ul id="user_tenant_list">
       <li class="title"><h4>{% trans "Available Tenants"%}</h4></li>
-      {% for tenant in tenants %}
+      {% for tenant in authorized_tenants %}
         {% if tenant.enabled %}
           <li><a href="{% url horizon:auth_switch tenant.id %}">{{tenant.name}}</a></li>
         {% endif %}
