blueprint: improve-user-experience Bug #884453 Ensured branding is contained and can't escape sidebar space/break layout by adding a CSS style #main_nav h1. This bounds the branding area and disables overflow. Additionally padding ot the right is adjuested moving the topbar navigation in line with the sidebars righthand side for asthetics.
Change-Id: Id0fcb71d8823e997fa891975dc9f1af904f862d1

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -144,6 +144,15 @@ h1 a{
   border: 1px solid #cbe0e8;
 }
 
+#main_nav h1 {
+  /* Ensure Branding doesn't exceed sidebar space */ 
+  display: block;
+  width: 188px;
+  padding-right: 5px; /*tidy topmenu alignment */
+  height: 35px;
+  overflow: hidden;
+}
+
 #main_nav li {
   margin: 0 20px 0 0;
   float: left;
