--- a/openstack-dashboard/dashboard/templates/splash.html
+++ b/openstack-dashboard/dashboard/templates/splash.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Login – OpenStack Dashboard</title>
     <link href='{{ STATIC_URL }}dashboard/css/bootstrap.css' media='screen' rel='stylesheet' />
-    <link href='{{ STATIC_URL }}dashboard/css/newstyle.css' media='screen' rel='stylesheet' />
+    <link href='{{ STATIC_URL }}dashboard/css/style.css' media='screen' rel='stylesheet' />
   </head>
   <body id="splash">
     <div class="container">
